Criando documentação de bankAccount e Movimentação
