# routes/bankAccount/bankAccountRoutes.js
@@ -5,9 +5,9 @@ import bankAccountValidator from "../../api/middlewares/bankAccountValidator.js"
 
 const routesBankAccount = Router();
 
-routesBankAccount.get("/bank", authValidate, bankAccountValidator.getValidator, BankAccountController.listBank);
+routesBankAccount.get("/bank/list", authValidate, bankAccountValidator.getValidator, BankAccountController.listBank);
 routesBankAccount.post("/bank", authValidate, bankAccountValidator.postValidator, BankAccountController.createBank);
-routesBankAccount.put("/bank/:id", authValidate, bankAccountValidator.putValidator, BankAccountController.updateBank);
-routesBankAccount.delete("/bank/:id", authValidate, bankAccountValidator.deleteValidator, BankAccountController.deleteBank);
+routesBankAccount.put("/updateBank/:id", authValidate, bankAccountValidator.putValidator, BankAccountController.updateBank);
+routesBankAccount.delete("/deleteBank/:id", authValidate, bankAccountValidator.deleteValidator, BankAccountController.deleteBank);
 
 export default routesBankAccount;
